# conflux-s3-utils

./: README.md  pyproject.toml
.github/workflows/: ci.yaml  docs.yaml  pypi.yaml
conflux_s3_utils/: s3client.py  s3uri.py
docs/: .gitignore  README.md
docs/source/: api.rst  conf.py  examples.rst  index.rst  installation.rst  quickstart.rst
tests/: test_s3uri.py
