[project]
name = "conflux_s3_utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1",
    "fsspec>=2024",
]

[dependency-groups]
dev = [
    "boto3-stubs[essential]>=1.42.5",
    "pytest>=9",
    "ruff>=0",
    "ty>=0",
]

[tool.uv]
package = true